fix(popups): fix unreadable confirmation hint

--- a/parfait/components/popups.css
+++ b/parfait/components/popups.css
@@ -157,6 +157,11 @@ panel toolbarseparator {
   }
 }
 
+/* confirmation hint */
+#confirmation-hint {
+  --arrowpanel-color: var(--pf-text-color) !important;
+}
+
 /* manage tab group */
 .tab-group-editor-panel {
   .panel-header {
